Fix deprecated URL constructor warning (#1)
Replaced the deprecated `new URL(String)` constructor with the modern `new URI(String).toURL()` alternative in `DriverLoader.java` and `SeedDatabaseAction.java`.

This change also includes adding the necessary `URISyntaxException` handling.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>